[package]
name = "specinfra"
version = "0.2.0"
authors = ["Gosuke Miyashita <gosukenator@gmail.com>"]
license = "MIT"
homepage = "https://github.com/libspecinfra/specinfra"
description = "This is the Rust implementation of Ruby specinfra gem"

[dependencies]
uname = "0.1.1"
libc = "0.2.24"
ssh2 = "0.3.1"

[lib]
name = "specinfra"
crate-type = ["dylib", "rlib"]
