[package]
name = "specinfra"
version = "0.3.0"
authors = ["Gosuke Miyashita <gosukenator@gmail.com>"]
license = "MIT"
homepage = "https://github.com/libspecinfra/specinfra"
description = "This is the Rust implementation of Ruby specinfra gem"

[dependencies]
uname = "0.1.1"
libc = "0.2.30"
users = "0.5.0"
ssh2 = { version = "0.3.1", optional = true }
md5 = "0.3.5"
sha2 = "0.6.0"
nix = "0.9.0"
dbus = { version = "0.5.4", optional = true }
version-compare = "0.0.6"
regex = "0.2.2"

[lib]
name = "specinfra"
crate-type = ["dylib", "rlib"]

[features]
default = ["backend-ssh"]
inline-systemd = ["dbus"]
backend-ssh = ["ssh2"]
test-service = []
